# chocopy

./: .gitignore  CMakeLists.txt  README.md
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
doc/PA1/: README.md  The Flex Manual Page.html
doc/PA1/example/: .gitignore  calc.l  calc.y  calc_driver.c  reimu.y  wc.l
doc/PA2/: README.md  visitor.md
doc/PA3/: README.md
doc/PA4/: README.md
doc/common/: dev.md
doc/common/docker/: Dockerfile
include/cgen/: InstGen.hpp  RiscVBackEnd.hpp  chocopy_cgen.hpp
include/ir-optimizer/: BasicBlock.hpp  Class.hpp  Constant.hpp  Function.hpp  GlobalVariable.hpp  IRBuilder.hpp  IRprinter.hpp  Module.hpp  Type.hpp  User.hpp  Value.hpp  chocopy_lightir.hpp  chocopy_optimization.hpp
include/parser/: chocopy_ast.hpp  chocopy_logging.hpp  chocopy_parse.hpp
include/semantic/: ClassDefType.hpp  FunctionDefType.hpp  SymbolTable.hpp  SymbolType.hpp  ValueType.hpp  chocopy_semant.hpp  hierarchy_tree.hpp
libs/json/: CMakeLists.txt
src/cgen/: CMakeLists.txt  chocopy_cgen.cpp
src/cgen/stdlib/: .gitignore  CMakeLists.txt  myprintf.c  stdlib.c  strcat.c
src/ir-optimizer/: BasicBlock.cpp  CMakeLists.txt  Class.cpp  Constant.cpp  Function.cpp  GlobalVariable.cpp  IRprinter.cpp  Instruction.cpp  Module.cpp  Type.cpp  User.cpp  Value.cpp  chocopy_lightir.cpp  chocopy_optimization.cpp
src/parser/: CMakeLists.txt  chocopy.l  chocopy.y  chocopy_ast.cpp  chocopy_logging.cpp  chocopy_parse.cpp
src/semantic/: CMakeLists.txt  chocopy_semant.cpp  chocopy_type.cpp
tests/: .gitignore  check.py  requirements.txt
tests/pa2/sample/: ast_coverage.py.out.typed  bad_class_init_return.py  bad_class_init_return.py.out.typed  bad_class_method.py.out.typed  bad_class_method_invoke.py  bad_class_method_invoke.py.out.typed  bad_class_method_override.py.out.typed  bad_class_method_override_attr.py.out.typed  bad_class_super.py.out.typed  bad_duplicate_local.py.out.typed  bad_local_assign.py.out.typed  class_def_assign.py  class_def_assign.py.out.typed  class_def_attr.py  class_def_attr.py.out.typed  class_def_init.py  class_def_init.py.out.typed  class_def_methods.py  class_def_methods.py.out.typed  decl_global_forward.py.out.typed
tests/pa2/sp23/: bad_method_call.py  bad_method_call.py.out.typed  class_list.py  class_list.py.out.typed  for_ident_list.py  for_ident_list.py.out.typed  forward_decl.py  forward_decl.py.out.typed  method_with_predefined_name.py  method_with_predefined_name.py.out.typed
web/: README.md
